--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -87,16 +87,16 @@ dt = difftool
 dift = difftool
 exist-remote = ls-remote --heads origin # (check if exist in remote) example: <git exist-remote branchName>
 f = fetch --prune
-graph = ll --graph # example: <git graph develop feature/some-14> or just <git graph>
+graph = ls --graph # example: <git graph develop feature/some-14> or just <git graph>
 graphx = graph --abbrev-commit --all
 history = !fzf-git --run hashes                                                                                                # (it requires to have installed the fzf-git plugin)
 lazy = !LANG=en_US.UTF-8 lazygit                                                                                               # (execute lazygit cmd)
 list = branch -v                                                                                                               # (list local branches) example: <git list>
 list-remotes = branch --remotes                                                                                                # (list remote branches ref) example: <git list-remotes>
-ll = log --format=format:'%C(bold yellow)%h%C(reset) %C(reset)%s %C(dim white)%an (%ad, %ar)%C(reset)' --decorate --date=short # alternative to <git log>, example: <git ls>
+ll = ls --name-only                                                                                                            # alternative to <git log>, example: <git ls>
 local-branches = !git branch -v | cut -c 3- | awk '{ print $2\" \"$1 }'                                                        # (show local only branches) example: <git local-branches>
 log-deleted = log --diff-filter=D --                                                                                           # (show logged files, alternativaly, you can pass a directory to search for) example: <git log-deleted>
-ls = ll --name-only                                                                                                            # alternative to <git log>, example: <git ls>
+ls = log --format=format:'%C(bold yellow)%h%C(reset) %C(reset)%s %C(dim white)%an (%ad, %ar)%C(reset)' --decorate --date=short # alternative to <git log>, example: <git ls>
 new = checkout -B                                                                                                              # (create new branches) example: <git new branchName>
 p = pull
 patch = !git add -N . && git diff HEAD
