--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -38,7 +38,7 @@ tool = difft # code
 prompt = false
 
 [difftool "difft"]
-cmd = difft --tab-width 2 --context 0 --display json "$LOCAL" "$REMOTE"
+cmd = difft --tab-width 2 --context 0 --display side-by-side "$LOCAL" "$REMOTE"
 
 [difftool "vscode"]
 cmd = code --wait --diff $LOCAL $REMOTE
@@ -49,6 +49,7 @@ cmd = code --wait --diff $LOCAL $REMOTE
 difftool = true
 
 [merge]
+ff = false
 tool = vscode
 
 [mergetool "vscode"]
@@ -92,12 +93,12 @@ cpn = cherry-pick -n
 current = branch --show-current          # (current branch) example: <git curr>
 delete = !gitx --run delete           # example: <git delete>
 delete-remote = !gitx --run delete -r # (delete a given branch in remote) example: <git delete-remote branchName>
-d = diff
-dd = diff --check --dirstat --find-copies --find-renames --histogram --color
-dt = difftool
-dift = difftool
+d = diff --word-diff --check --dirstat --find-copies --find-renames --histogram --color
+dt = difftool --word-diff
+dts = dt --staged
 exist-remote = ls-remote --heads origin # (check if exist in remote) example: <git exist-remote branchName>
 f = fetch --prune
+gg = grep --break --heading --line-number --color
 graph = ls --graph # example: <git graph develop feature/some-14> or just <git graph>
 graphx = graph --abbrev-commit --all
 history = !gitx --run hashes                                                                                                # (it requires to have installed the gitx plugin)
@@ -105,6 +106,7 @@ lazy = !LANG=en_US.UTF-8 lazygit                                                
 list = branch -v                                                                                                               # (list local branches) example: <git list>
 list-remotes = branch --remotes                                                                                                # (list remote branches ref) example: <git list-remotes>
 ll = ls --name-only                                                                                                            # alternative to <git log>, example: <git ls>
+lp = ls --first-parent # only show parent related commits
 local-branches = !git branch -v | cut -c 3- | awk '{ print $2\" \"$1 }'                                                        # (show local only branches) example: <git local-branches>
 log-deleted = log --diff-filter=D --                                                                                           # (show logged files, alternativaly, you can pass a directory to search for) example: <git log-deleted>
 ls = log --format=format:'%C(bold yellow)%h%C(reset) %C(reset)%s %C(dim white)%an (%ad, %ar)%C(reset)' --decorate --date=short # alternative to <git log>, example: <git ls>
@@ -112,6 +114,7 @@ new = checkout -B                                                               
 p = pull
 patch = !git add -N . && git diff HEAD
 pushf = push --force --progress                            # (force push) example: <git pushf>
+optmize = gc --agressive # clean
 recent-branches = !git branch --sort=-committerdate | head # (show recent branches) example: <git recent-branches>
 # git branch -m <branch=new-branch-name>; git push origin <branch>; git push origin --delete <current=$(git curr)>
 rename = branch -m                                 # (rename branch locally, remember to <git push origin branch> + <git delete-remote>) example: <git rename newName>
@@ -126,5 +129,7 @@ tags = !gitx --run tags       # (it requires to have installed the gitx plugin)
 unmodule = submodule deinit -f
 unstage = restore --staged
 unstage-all = unstage -S .
+what = whatchanged
+who = shortlog --summary --email --numbered --no-merges
 wip = !git add -A && git commit -m 'WIP' # Work In Progress commit
 worktrees = !gitx --run worktrees     # (it requires to have installed the gitx plugin)
