chore: add asdf dir variable

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -83,7 +83,7 @@ bed = branch --edit-description
 bsd = branch --show-description
 c = commit
 ca = commit --amend
-cane = commit --amend --no-edit
+caf = commit --amend --no-edit
 ci = commit --interactive
 cm = commit -m
 conflicts = diff --name-only --diff-filter=U # (show conflicts) example: <git conflicts>
