feat: add flatpak

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -32,17 +32,11 @@ DIRECTLY.
 {{-   $email = promptString "git email" $email -}}
 {{- end -}}
 
-
-{{- $useSSHClient := false -}}
-{{- if hasKey . "useSSHClient" -}}
-{{-   $useSSHClient = .useSSHClient -}}
-{{- else if $interactive -}}
-{{-   $useSSHClient = promptBool "Register ssh client" false -}}
-{{- end -}}
-
 {{- if $interactive -}}
 {{-   writeToStdout "💡 Tip: you can re-enter your name and email with `chezmoi init --data=false`.\n" -}}
 {{- end -}}
+
+{{-   writeToStdout "⚙️ Once you install asdf, you need to install your plugins, to then, use `asdf install`.\n\tCheck your `.tool-versions` file.\n" -}}
 
 sourceDir: {{ .chezmoi.sourceDir | quote }}
 
@@ -50,5 +44,3 @@ data:
   git:
     name: {{ $name | quote }}
     email: {{ $email | quote }}
-  enabled:
-    sshAgent: {{ $useSSHClient }}
