--- a/.chezmoiscripts/run_onchange_install-gitx.tmpl
+++ b/.chezmoiscripts/run_onchange_install-gitx.tmpl
@@ -2,7 +2,7 @@
 
 # Can use templates
 
-echo "Installing gitx script"
+echo "🚀 Installing gitx script"
 
 {{ $gitx := joinPath .chezmoi.sourceDir "tools" "scripts" "gitx" | quote }}
 
