--- a/.chezmoiscripts/run_once_install-xcp_xpb.tmpl
+++ b/.chezmoiscripts/run_once_install-xcp_xpb.tmpl
@@ -2,7 +2,7 @@
 
 # Can use templates
 
-echo "Installing xcp and xpb shell"
+echo "🚀 Installing xcp and xpb shell"
 
 {{ $xcp := joinPath .chezmoi.sourceDir "tools" "scripts" "xcp" | quote }}
 {{ $xpb := joinPath .chezmoi.sourceDir "tools" "scripts" "xpb" | quote }}
