refactor: update installation scripts to use /usr/local/bin instead of /usr/bin
Previously, it was using /usr/bin, which was wrong.
It should use /usr/local/bin, and therefore, do not put in the same place as apt.

--- a/.chezmoiscripts/run_once_install-xcp_xpb.tmpl
+++ b/.chezmoiscripts/run_once_install-xcp_xpb.tmpl
@@ -8,4 +8,8 @@ echo "🚀 Installing xcp and xpb shell"
 {{ $xpb := joinPath .chezmoi.sourceDir "tools" "scripts" "xpb" | quote }}
 
 # copy with permission
-sudo cp -p {{ $xcp }} {{ $xpb }} /usr/bin
+# sudo cp -p {{ $xcp }} {{ $xpb }} /usr/local/bin
+
+# or use the system utils to set proper permissions/groups for this folder
+
+install -m 755 ./my_program /usr/local/bin/
