--- a/.chezmoiscripts/run_onchange_install-gitx.tmpl
+++ b/.chezmoiscripts/run_onchange_install-gitx.tmpl
@@ -7,4 +7,4 @@ echo "🚀 Installing gitx script"
 {{ $gitx := joinPath .chezmoi.sourceDir "tools" "scripts" "gitx" | quote }}
 
 # copy with permission
-sudo cp -p {{ $gitx }} /usr/bin
+sudo cp -p {{ $gitx }} /usr/local/bin
