--- a/.chezmoiscripts/run_once_install-bsdtar.tmpl
+++ b/.chezmoiscripts/run_once_install-bsdtar.tmpl
@@ -1,4 +1,5 @@
-#!/bin/bash
+{{- if hasKey .scripts "bsdtar" -}}
+#!/usr/bin/env bash
 
 version=$(apt search libarchive-tools --version)
 
@@ -6,3 +7,5 @@ echo "🚀 Installing bsdtar version ${version} directly from apt"
 
 sudo apt install -qq -y libarchive-tools >/dev/null 2>&1
 # sudo apt autopurge -y libarchive-tools
+
+{{ end -}}
