--- a/.chezmoiscripts/run_once_install-btop.tmpl
+++ b/.chezmoiscripts/run_once_install-btop.tmpl
@@ -1,8 +1,11 @@
-#!/bin/bash
+{{- if hasKey .scripts "btop" -}}
+#!/usr/bin/env bash
 
 echo "🚀 Installing btop latest"
 
 curl -sLo - https://github.com/aristocratos/btop/releases/latest/download/btop-x86_64-linux-musl.tbz |
   bsdtar -xjC /tmp
 
-mv /tmp/btop/bin/btop $HOME/.local/bin
+mv /tmp/btop/bin/btop {{ .installDirs.home }}
+
+{{ end -}}
