--- a/.chezmoiscripts/run_once_install-debug-tools.tmpl
+++ b/.chezmoiscripts/run_once_install-debug-tools.tmpl
@@ -1,4 +1,5 @@
-#!/bin/bash
+{{- if hasKey .scripts "debug-tools" -}}
+#!/usr/bin/env bash
 
 # Install usefull debugging tools for debian
 
@@ -18,3 +19,5 @@ pkg=(
 echo "🚀 Installed debugging tools: ${pkg[*]}"
 
 sudo apt install -qq -y "${pkg[@]}" >/dev/null 2>&1
+
+{{ end -}}
