--- a/.chezmoiscripts/run_once_install-eza.tmpl
+++ b/.chezmoiscripts/run_once_install-eza.tmpl
@@ -1,11 +1,14 @@
-#!/bin/bash
+{{- if hasKey .scripts "eza" -}}
+#!/usr/bin/env bash
 
 echo "🚀 Installing eza latest"
 
 curl -sLo - https://github.com/eza-community/eza/releases/latest/download/eza_x86_64-unknown-linux-musl.tar.gz |
-  tar -xzC $HOME/.local/bin # --transform='s|eza|ls|'
+  tar -xzC {{ .installDirs.home }} # --transform='s|eza|ls|'
 
 # echo 'alias ls="eza --color=auto --git --icons"' >> $ZSH_CUSTOM/aliases.zsh
 
 # eza comes with improved permission viewing, (With human and octal permissions)
 # it also comes with colouring by default and allow to show a "tree view" of directories
+
+{{ end -}}
