--- a/.chezmoiscripts/run_once_install-rg.tmpl
+++ b/.chezmoiscripts/run_once_install-rg.tmpl
@@ -1,6 +1,7 @@
-#!/bin/bash
+{{- if hasKey .scripts "rg" -}}
+#!/usr/bin/env bash
 
-# getting latest version of fd
+# getting latest version of rg
 version=$(curl -s https://api.github.com/repos/BurntSushi/ripgrep/releases/latest | jq -r .tag_name)
 
 echo "🚀 Installing rg $version"
@@ -8,6 +9,8 @@ echo "🚀 Installing rg $version"
 curl -sLo - https://github.com/BurntSushi/ripgrep/releases/download/$version/ripgrep-$version-x86_64-unknown-linux-musl.tar.gz |
   tar -xzC /tmp
 
-sudo mv /tmp/ripgrep-$version-x86_64-unknown-linux-musl/rg /usr/local/bin
+sudo mv /tmp/ripgrep-$version-x86_64-unknown-linux-musl/rg {{ .installDirs.main }}
 
 rm -rfd /tmp/ripgrep-$version-x86_64-unknown-linux-musl
+
+{{ end -}}
