--- a/.chezmoiscripts/run_once_install-bat.tmpl
+++ b/.chezmoiscripts/run_once_install-bat.tmpl
@@ -1,4 +1,5 @@
-#!/bin/bash
+{{- if hasKey .scripts "bat" -}}
+#!/usr/bin/env bash
 
 # getting latest version
 version=$(curl -s https://api.github.com/repos/sharkdp/bat/releases/latest | jq -r .tag_name)
@@ -6,4 +7,6 @@ version=$(curl -s https://api.github.com/repos/sharkdp/bat/releases/latest | jq 
 echo "🚀 Installing bat $version"
 
 curl -sLo - "https://github.com/sharkdp/bat/releases/latest/download/bat-${version}-x86_64-unknown-linux-musl.tar.gz" |
-  sudo tar -xzC /usr/local/bin
+  sudo tar -xzC {{ .installDirs.main }}
+
+{{ end -}}
