--- a/.chezmoiscripts/run_once_install-diffstatic.tmpl
+++ b/.chezmoiscripts/run_once_install-diffstatic.tmpl
@@ -1,6 +1,9 @@
-#!/bin/bash
+{{- if hasKey .scripts "diffstatic" -}}
+#!/usr/bin/env bash
 
 echo "🚀 Installing diffstatic (dift) latest"
 
 curl -sLo - https://github.com/Wilfred/difftastic/releases/latest/download/difft-x86_64-unknown-linux-musl.tar.gz |
-  sudo tar -xzC /usr/local/bin # --transform='s|eza|ls|'
+  sudo tar -xzC {{ .installDirs.home }} # --transform='s|eza|ls|'
+
+{{ end -}}
