--- a/.chezmoiscripts/run_once_install-fd.tmpl
+++ b/.chezmoiscripts/run_once_install-fd.tmpl
@@ -1,4 +1,5 @@
-#!/bin/bash
+{{- if hasKey .scripts "fd" -}}
+#!/usr/bin/env bash
 
 f="$ZEN/internal/completions/"
 
@@ -10,9 +11,11 @@ echo "🚀 Installing fd $version"
 curl -sLo - https://github.com/sharkdp/fd/releases/latest/download/fd-$version-x86_64-unknown-linux-musl.tar.gz |
   tar -xzC /tmp
 
-sudo mv /tmp/fd-$version-x86_64-unknown-linux-musl/fd /usr/local/bin
+sudo mv /tmp/fd-$version-x86_64-unknown-linux-musl/fd {{ .installDirs.main }}
 
 mv /tmp/fd-$version-x86_64-unknown-linux-musl/autocomplete/_fd $f
 
 rm -rfd /tmp/fd-$version-x86_64-unknown-linux-musl
-# sudo rm /usr/local/bin/asdf
+# sudo rm {{ joinPath .installDirs.main "fd" }}
+
+{{ end -}}
