--- a/.chezmoiscripts/run_once_install-fzf.tmpl
+++ b/.chezmoiscripts/run_once_install-fzf.tmpl
@@ -1,4 +1,5 @@
-#!/bin/bash
+{{- if hasKey .scripts "fzf" -}}
+#!/usr/bin/env bash
 
 # getting latest version
 version=$(curl -s https://api.github.com/repos/junegunn/fzf/releases/latest | jq -r .tag_name)
@@ -6,4 +7,6 @@ version=$(curl -s https://api.github.com/repos/junegunn/fzf/releases/latest | jq
 echo "🚀 Installing fzf $version"
 
 curl -sLo - "https://github.com/junegunn/fzf/releases/latest/download/fzf-${version#v}-linux_amd64.tar.gz" |
-  sudo tar -xzC /usr/local/bin
+  sudo tar -xzC {{ .installDirs.main }}
+
+{{ end -}}
