--- a/.chezmoiscripts/run_once_install-lazygit.tmpl
+++ b/.chezmoiscripts/run_once_install-lazygit.tmpl
@@ -1,4 +1,5 @@
-#!/bin/bash
+{{- if hasKey .scripts "lazygit" -}}
+#!/usr/bin/env bash
 
 # getting latest version
 version=$(curl -s https://api.github.com/repos/jesseduffield/lazygit/releases/latest | jq -r .tag_name)
@@ -6,4 +7,6 @@ version=$(curl -s https://api.github.com/repos/jesseduffield/lazygit/releases/la
 echo "🚀 Installing lazygit $version"
 
 curl -sLo - "https://github.com/jesseduffield/lazygit/releases/latest/download/lazygit_${version#v}_Linux_x86_64.tar.gz" |
-  sudo tar -xzC /usr/local/bin
+  sudo tar -xzC {{ .installDirs.home }}
+
+{{ end -}}
