--- a/.chezmoiscripts/run_once_install-nvim.tmpl
+++ b/.chezmoiscripts/run_once_install-nvim.tmpl
@@ -1,7 +1,10 @@
-#!/bin/bash
+{{- if hasKey .scripts "nvim" -}}
+#!/usr/bin/env bash
 
 echo "🚀 Installing nvim latest version"
 
 # Download and install nvim
 sudo rm -rf /opt/nvim
 curl -sL https://github.com/neovim/neovim/releases/latest/download/nvim-linux-x86_64.tar.gz | sudo tar -xz -C /opt
+
+{{ end -}}
