--- a/.chezmoiscripts/run_once_install-procs.tmpl
+++ b/.chezmoiscripts/run_once_install-procs.tmpl
@@ -1,4 +1,5 @@
-#!/bin/bash
+{{- if hasKey .scripts "procs" -}}
+#!/usr/bin/env bash
 
 # getting latest version
 version=$(curl -s https://api.github.com/repos/dalance/procs/releases/latest | jq -r .tag_name)
@@ -6,6 +7,8 @@ version=$(curl -s https://api.github.com/repos/dalance/procs/releases/latest | j
 echo "🚀 Installing procs $version"
 
 curl -sLo - https://github.com/dalance/procs/releases/latest/download/procs-$version-x86_64-linux.zip |
-  bsdtar -xC $HOME/.local/bin # --transform='s|eza|ls|'
+  bsdtar -xC {{ .installDirs.home }} # --transform='s|eza|ls|'
 
 # echo 'alias ls="eza --color=auto --git --icons"' >> $ZSH_CUSTOM/aliases.zsh
+
+{{ end -}}
