--- a/.chezmoiscripts/run_once_install-sd.tmpl
+++ b/.chezmoiscripts/run_once_install-sd.tmpl
@@ -1,4 +1,5 @@
-#!/bin/bash
+{{- if hasKey .scripts "sd" -}}
+#!/usr/bin/env bash
 
 # getting latest version
 version=$(curl -s https://api.github.com/repos/chmln/sd/releases/latest | jq -r .tag_name)
@@ -6,6 +7,8 @@ version=$(curl -s https://api.github.com/repos/chmln/sd/releases/latest | jq -r 
 echo "🚀 Installing sd $version"
 
 curl -sLo - https://github.com/chmln/sd/releases/latest/download/sd-$version-x86_64-unknown-linux-musl.tar.gz |
-  tar -xzC $HOME/.local/bin # --transform='s|eza|ls|'
+  tar -xzC {{ .installDirs.home }} # --transform='s|eza|ls|'
 
 # echo 'alias ls="eza --color=auto --git --icons"' >> $ZSH_CUSTOM/aliases.zsh
+
+{{ end -}}
