--- a/.chezmoiscripts/run_once_install-sqlfluff.tmpl
+++ b/.chezmoiscripts/run_once_install-sqlfluff.tmpl
@@ -1,4 +1,5 @@
-#!/bin/bash
+{{- if hasKey .scripts "sqlfluff" -}}
+#!/usr/bin/env bash
 
 # SQL linter and formatter
 # https://github.com/sqlfluff/sqlfluff/tree/main
@@ -9,3 +10,5 @@ echo "🚀 Installing sqlfluff version ${version} directly from apt"
 
 echo "    Install IT BY TYPING: sudo apt install -qq -y sqlfluff >/dev/null 2>&1"
 # sudo apt autopurge -y sqlfluff
+
+{{ end -}}
