feat: update tool versions and add permission utility script

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -54,6 +54,7 @@ See:
   "just"
   "lazygit"
   "nvim"
+  "perm"
   "pet"
   "podman"
   "procs"
@@ -80,6 +81,7 @@ See:
   "fd"
   "fzf"
   "nvim"
+  "perm"
   "pet"
   "rg"
   "sd"
