feat: enhance permission script with colored output and fix install script

--- a/.chezmoiscripts/run_once_install-perm.tmpl
+++ b/.chezmoiscripts/run_once_install-perm.tmpl
@@ -5,7 +5,7 @@ echo "🚀 Installing perm script to shell"
 {{ $xcp := joinPath .chezmoi.sourceDir "tools" "scripts" "perm" | quote -}}
 
 # copy with permission
-cp -p {{ $xcp }} {{ .installDirs.home }}
+cp -fp {{ $xcp }} {{ .installDirs.home }}
 
 # or use the system utils to set proper permissions/groups for this folder
 # install -m 755 ./my_program {{ .installDirs.home }}
